--- a/app/src/main/res/drawable/custom_followed_button.xml
+++ b/app/src/main/res/drawable/custom_followed_button.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <gradient
                 android:angle="45"
                 android:startColor="@color/yellow"
                 android:centerColor="@color/orange"
                 android:endColor="@color/dark_orange"
                 android:type="linear" />
+
+            <corners android:radius="15dp" />
         </shape>
     </item>
 
@@ -17,8 +20,10 @@
         android:right="3dp"
         android:top="3dp"
         android:bottom="3dp">
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
+            <corners android:radius="15dp" />
+
         </shape>
     </item>
 
