--- a/app/src/main/res/layout/fragment_chat_room.xml
+++ b/app/src/main/res/layout/fragment_chat_room.xml
@@ -1,31 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_bottom_sheet"
     android:orientation="vertical"
-    tools:context=".ui.fragment.comment.placeholder.CommentListBottomSheetDialog">
+    tools:context=".ChatRoomFragment">
 
-
-    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/comment"
-        android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/black"
-        android:layout_gravity="center_horizontal"
-        />
+        android:layout_gravity="bottom"
+        android:layout_margin="15dp"
+        android:orientation="horizontal">
 
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_back"
+            android:background="?attr/selectableItemBackground"
+            android:scaleType="centerCrop"
+            android:id="@+id/back"
+            android:layout_gravity="center_vertical"
+            />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/user_profile_picture"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/reona_pfp"/>
+
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_gravity="center_vertical"
+            android:text="@string/username"/>
+
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="10dp"
-        android:id="@+id/comment_recycler_view"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -47,7 +65,7 @@
             android:src="@drawable/reona_pfp"/>
 
         <EditText
-            android:id="@+id/comment"
+            android:id="@+id/message"
             android:textColor="#6E2424"
             android:textSize="16sp"
             android:layout_height="50dp"
@@ -57,18 +75,19 @@
             android:padding="10dp"
             android:drawablePadding="10dp"
             android:textColorHint="@color/text_hint_color"
-            android:hint="@string/add_your_comment"
+            android:hint="@string/_message"
             android:inputType="textEmailAddress"
             />
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/upload_button"
+            android:id="@+id/sent_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_up_arrow"
-            android:background="@drawable/circle_button"
+            android:src="@drawable/ic_send"
             android:padding="5dp"
             android:layout_marginStart="5dp"
+            android:background="?attr/selectableItemBackground"
+            android:scaleType="centerCrop"
             android:visibility="gone"
             />
 
