--- a/app/src/main/res/menu/home_toolbar_menu.xml
+++ b/app/src/main/res/menu/home_toolbar_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/message_fragment"
+    <item android:id="@+id/message_btn"
         android:title="@string/bookmark"
         android:icon="@drawable/ic_message"
         app:showAsAction="ifRoom"
